k8s/ui/superset-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: superset
  namespace: aurum-dev
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`superset.aurum.localtest.me`)
      kind: Rule
      services:
        - name: superset
          port: 8088
